k8s/cvat-ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cvat
  labels:
    app.kubernetes.io/name: cvat
    app.kubernetes.io/part-of: cvat
