k8s/cvat-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvat-ui
  namespace: cvat
  labels:
    app: cvat-ui
    app.kubernetes.io/name: cvat-ui
    app.kubernetes.io/part-of: cvat
spec:
  type: ClusterIP
  selector:
    app: cvat-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
